# datafusion-java

./: .asf.yaml  .buildinfo  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE.txt  README.md  genindex.html  index.html  objects.inv  pom.xml  search.html  searchindex.js
.cargo/: config.toml
.doctrees/: environment.pickle  index.doctree
.doctrees/contributor-guide/: code-style.doctree  development.doctree  index.doctree  releasing.doctree  updating-datafusion-version.doctree
.doctrees/user-guide/: api-reference.doctree  dataframe.doctree  index.doctree  installation.doctree  parquet.doctree  project-status.doctree  proto-plans.doctree  quickstart.doctree  scalar-udf.doctree  sessioncontext.doctree  table-provider.doctree
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yml  docs.yaml  format.yml  lint.yml  pr_title_check.yml  rat.yml
_sources/contributor-guide/: code-style.md.txt  development.md.txt
_sources/user-guide/: scalar-udf.md.txt
api/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
api/org/apache/datafusion/: ArrowReadOptions.html  AvroReadOptions.html  CacheManagerOptions.Builder.html  CacheManagerOptions.html  ColumnarValue.Array.html  ColumnarValue.Scalar.html  ColumnarValue.html  ConfigurationException.html  CsvReadOptions.FileCompressionType.html  CsvReadOptions.html  CsvWriteOptions.html  DataFrame.html  DataFusionException.html  ExecutionException.html  FileCompressionType.html  IoException.html  JoinType.html  JsonWriteOptions.html  MemoryUsage.html  NativeLibraryLoader.html  NdJsonReadOptions.html  NotImplementedException.html  ObjectStoreOptions.Gcs.Builder.html  ObjectStoreOptions.Gcs.html  ObjectStoreOptions.Http.Builder.html  ObjectStoreOptions.Http.html  ObjectStoreOptions.S3.Builder.html  ObjectStoreOptions.S3.html  ObjectStoreOptions.html  ParquetReadOptions.html  ParquetWriteOptions.html  PlanException.html  ResourcesExhaustedException.html  RuntimeStats.html  ScalarFunction.html  ScalarFunctionArgs.html  ScalarUdf.html  SessionContext.html  SessionContextBuilder.html  SimpleTableProvider.html  (+7 more)
api/org/apache/datafusion/class-use/: ArrowReadOptions.html  AvroReadOptions.html  CacheManagerOptions.Builder.html  CacheManagerOptions.html  ColumnarValue.Array.html  ColumnarValue.Scalar.html  ColumnarValue.html  ConfigurationException.html  CsvReadOptions.FileCompressionType.html  CsvReadOptions.html  CsvWriteOptions.html  DataFrame.html  DataFusionException.html  ExecutionException.html  FileCompressionType.html  IoException.html  JoinType.html  JsonWriteOptions.html  MemoryUsage.html  NativeLibraryLoader.html  NdJsonReadOptions.html  NotImplementedException.html  ObjectStoreOptions.Gcs.Builder.html  ObjectStoreOptions.Gcs.html  ObjectStoreOptions.Http.Builder.html  ObjectStoreOptions.Http.html  ObjectStoreOptions.S3.Builder.html  ObjectStoreOptions.S3.html  ObjectStoreOptions.html  ParquetReadOptions.html  ParquetWriteOptions.html  PlanException.html  ResourcesExhaustedException.html  RuntimeStats.html  ScalarFunction.html  ScalarFunctionArgs.html  ScalarUdf.html  SessionContext.html  SessionContextBuilder.html  SimpleTableProvider.html  (+4 more)
api/org/apache/datafusion/internal/: JniBridge.html  package-summary.html  package-tree.html  package-use.html
contributor-guide/: code-style.html  development.html  index.html  releasing.html  updating-datafusion-version.html
core/: pom.xml
dev/: new_bridge.py
dev/bridge-template/: .gitignore  README.md
dev/bridge-template/native/: Cargo.toml
dev/bridge-template/native/src/: lib.rs
dev/changelog/: 0.1.0.md
dev/release/: README.md  build-release.sh  create-tarball.sh  generate-changelog.py  publish-to-maven.sh  rat_exclude_files.txt  release-tarball.sh  requirements.txt  verify-release-candidate.sh
dev/release/datafusion-java-rm/: Dockerfile  build-native-libs.sh
docs/: Makefile  README.md  build.sh  make.bat  requirements.txt
docs/source/: conf.py  index.md
docs/source/contributor-guide/: code-style.md  development.md  index.md  releasing.md  updating-datafusion-version.md
docs/source/user-guide/: api-reference.md  data-source.md  dataframe.md  index.md  installation.md  parquet.md  project-status.md  proto-plans.md  quickstart.md  scalar-udf.md  sessioncontext.md  table-provider.md
examples/: README.md  SPARK_INTEGRATION.md  pom.xml
examples/native/: Cargo.toml
examples/native/src/: lib.rs
examples/python/: README.md  bridge_demo.py  ffi_table_provider_demo.py
native/: Cargo.toml  build.rs
native-common/: Cargo.toml  README.md
native-common/src/: errors.rs  lib.rs
native/src/: arrow.rs  avro.rs  cache_manager.rs  cancellation.rs  csv.rs  data_source.rs  errors.rs  executed_plan.rs  ffi_table_provider.rs  jni_util.rs  json.rs  lib.rs  memory.rs  object_store.rs  partitioned_execution.rs  proto.rs  rerun_provider.rs  runtime_metrics.rs  schema.rs  streaming_table.rs  table_provider.rs  udf.rs
proto/: arrow_read_options.proto  avro_read_options.proto  cache_manager_options.proto  csv_read_options.proto  csv_write_options.proto  executed_plan.proto  file_compression_type.proto  json_read_options.proto  json_write_options.proto  object_store_options.proto  parquet_read_options.proto  rerun_table_options.proto  session_options.proto
spark/: README.md  pom.xml
spark/bridge/: Cargo.toml
spark/bridge/src/: ffi.rs  lib.rs  options.rs  scan.rs  widening.rs
spark/bridge/tests/: export_macro.rs
spark/native/: Cargo.toml
spark/native/src/: lib.rs  scan.rs  widening.rs
spark/scaffold/: new_bridge.py
spark/scaffold/bridge-template/: README.md  pom.xml  smoke_test.py
spark/scaffold/bridge-template/native/: Cargo.toml
user-guide/: api-reference.html  dataframe.html  index.html  installation.html  parquet.html  project-status.html  proto-plans.html  quickstart.html  scalar-udf.html  sessioncontext.html  table-provider.html
(+165 files in other folders)
