# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "2"
members = [
    "native",
    "native-common",
    "examples/native",
    "spark/bridge",
]

# Every dependency used by any workspace member is declared here so version
# bumps live in one place and the resolver picks a single version of each
# crate across the workspace. Members reference these via `{ workspace = true }`
# and add per-crate flags (optional, features, default-features) at the use
# site.
[workspace.dependencies]
arrow = { version = "58", features = ["ffi"] }
async-trait = "0.1"
datafusion = { version = "53.1.0" }
datafusion-proto = "53.1.0"
datafusion-substrait = "53.1.0"
futures = "0.3"
jni = "0.21"
# Pinned to the major DataFusion 53.1 pulls in transitively (0.13.x) so we
# share the same `dyn ObjectStore` vtable and don't double-link.
object_store = { version = "0.13", default-features = false }
prost = "0.14"
prost-build = "0.14"
protoc-bin-vendored = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
# Optional, cfg-gated. See `native/Cargo.toml` for the build-flag dance.
tokio-metrics = "0.5"
url = "2"
