# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-jni-common"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# `datafusion-jni` builds DataFusion with `avro`, which adds the
# `DataFusionError::AvroError` variant our classifier maps to IoException.
# Feature-forwarded so consumers that don't read Avro (the Spark helper)
# don't pull the apache-avro stack into their cdylib.
avro = ["datafusion/avro"]

[dependencies]
datafusion = { workspace = true }
futures = { workspace = true }
jni = { workspace = true }
tokio = { workspace = true }
