# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0

[package]
name = "datafusion-java-ffi-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# Built as a cdylib so the JVM-side example can System.load() the artifact.
# `rlib` lets us add Rust-level unit tests if needed.
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { version = "58", features = ["ffi"] }
datafusion = { version = "53.1.0" }
datafusion-ffi = "53.1.0"
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread"] }
