# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0

[package]
name = "datafusion-java-example-bridge"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "datafusion_example_bridge"
# Built as a cdylib so the JVM loads it via NativeLibraryLoader; `rlib` keeps
# the Rust-level unit tests (options decoding, partition layout) runnable.
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
datafusion-spark-bridge = { path = "../../spark/bridge" }

[dev-dependencies]
tokio = { workspace = true }
