# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0

[package]
name = "datafusion-spark-helper"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# cdylib for the JVM to load via System.load; rlib so Rust-level tests can
# exercise the WideningTableProvider directly without going through JNI.
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-ffi = { workspace = true }
futures = { workspace = true }
jni = { workspace = true }
tokio = { workspace = true }
