# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0

[package]
name = "datafusion-spark-helper"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# cdylib for the JVM to load via System.load. All logic lives in the
# datafusion-spark-bridge rlib; this crate is only the JNI symbol surface
# for the generic io.datafusion.spark.FfiHelperNative class.
crate-type = ["cdylib"]

[dependencies]
datafusion-spark-bridge = { path = "../bridge" }
jni = { workspace = true }
